--- a/block3.css
+++ b/block3.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    margin-top: 67px;
+    margin-top: 34px;
     margin-left: 15.97px;
     }
     .menu1 li {
@@ -11,40 +11,76 @@
     margin: 0 0 20.9px 0;
     padding: 0;
     }
+.Born_Today{
+    position: absolute;
+width: 413px;
+height: 181px;
+right: 443px;
+top: 893px;
+}
+.prev{
+    position: absolute;
+width: 334px;
+height: 21px;
+left: 0px;
+top: -40px;
+
+font-family: ProximaNova;
+font-size: 24px;
+line-height: 21px;
+/* identical to box height, or 87% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+
+}
 .menu2 {
     margin: 0;
     padding: 0;
+    width: 413;
     list-style-type: none;
-    margin-top: -365.5px;
-    margin-left: 446px;
     }
     .menu2 li {
-    width: 80px;
+    width: 79px;
     height: 112px;
-    margin: 0 0 0 0;
+    margin: 0 0px 0 0;
     padding: 0;
     display: inline-block;
+    margin-top: 25px;
     }
+.See_on_Netflix{
+    position: absolute;
+width: 414px;
+height: 182px;
+right: 441px;
+bottom: 920px;
+}
 .menu3 {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    margin-top: 88px;
-    margin-left: 446px;
     }
     .menu3 li {
-    width: 80px;
+    width: 79px;
     height: 112px;
+    margin-top: 25px;
     margin: 0 0 0 0;
     padding: 0;
     display: inline-block;
     }
+.Todays_Wallpapers{
+    position: absolute;
+width: 407px;
+height: 379px;
+right: 15px;
+top: 893px;
+}
 .menu4 {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    margin-top: -320.4px;
-    margin-left: 878px;
     }
     .menu4 li {
     width: 406px;
@@ -57,9 +93,8 @@
     width: 406px;
     height: 101px;
     left: 0px;
-    top: 0px;
-    margin-top: 938px;
-    margin-left: 878px;
+    top: -16px;
+
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 37.41%, rgba(23, 23, 23, 0.917403) 100%);
 }
 .shadow3 {
@@ -67,9 +102,8 @@
     width: 406px;
     height: 101px;
     left: 0px;
-    top: 0px;
-    margin-top: 1059px;
-    margin-left: 878px;
+    top: 105px;
+  
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 37.41%, rgba(23, 23, 23, 0.917403) 100%);
 }
 .shadow4 {
@@ -77,9 +111,8 @@
     width: 406px;
     height: 101px;
     left: 0px;
-    top: 0px;
-    margin-top: 1180px;
-    margin-left: 878px;
+    top: 226px;
+  
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 37.41%, rgba(23, 23, 23, 0.917403) 100%);
 }
 .line1 {
@@ -90,4 +123,151 @@
     top: 0px;
     margin-top: 1302px;
     margin-left: 0px;
+    background: rgba(0, 0, 0, 0.149994);
     }
+.txt16{
+    position: absolute;
+width: 325.37px;
+height: 21px;
+left: 0px;
+top: -25px;
+
+font-family: ProximaNova;
+font-size: 24px;
+line-height: 21px;
+/* identical to box height, or 87% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+}
+.Last_News{
+    position: absolute;
+width: 414px;
+height: 381px;
+left: 15px;
+top: 891px;
+}
+.txt17{
+    position: absolute;
+width: 215.29px;
+height: 21px;
+left: 165px;
+top: -15px;
+
+font-family: ProximaNova;
+font-size: 15px;
+line-height: 21px;
+/* identical to box height, or 140% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+}
+.txt18{
+    position: absolute;
+width: 265.9px;
+height: 42px;
+left: 160px;
+top: 16px;
+
+font-family: ProximaNova;
+font-size: 18px;
+line-height: 21px;
+/* or 117% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+}
+.txt19{
+    position: absolute;
+width: 248.41px;
+height: 60px;
+left: 160px;
+top: 63px;
+
+font-family: ProximaNova;
+font-size: 14px;
+line-height: 20px;
+/* or 143% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+
+}
+.txt20{
+    position: absolute;
+width: 248.41px;
+height: 42px;
+left: 160px;
+top: 140px;
+
+font-family: ProximaNova;
+font-size: 18px;
+line-height: 21px;
+/* or 117% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+
+}
+.txt21{
+    position: absolute;
+width: 248.41px;
+height: 60px;
+left: 160px;
+top: 188px;
+
+font-family: ProximaNova;
+font-size: 14px;
+line-height: 20px;
+/* or 143% */
+
+display: flex;
+align-items: center;
+
+color: rgba(0, 0, 0, 0.795488);
+}
+.txt22{
+    position: absolute;
+    width: 259.9px;
+    height: 42px;
+    left: 160px;
+    top: 266px;
+    
+    font-family: ProximaNova;
+    font-size: 18px;
+    line-height: 21px;
+    /* or 117% */
+    
+    display: flex;
+    align-items: center;
+    
+    color: rgba(0, 0, 0, 0.795488);
+    
+}
+.txt23{
+    position: absolute;
+    width: 249.38px;
+    height: 60px;
+    left: 160px;
+    top: 314px;
+    
+    font-family: ProximaNova;
+    font-size: 14px;
+    line-height: 20px;
+    /* or 143% */
+    
+    display: flex;
+    align-items: center;
+    
+    color: rgba(0, 0, 0, 0.795488);
+}
