--- a/index.css
+++ b/index.css
@@ -30,6 +30,48 @@
   .loaded .preloader {
     display: none;
   }
+  .L1{
+    position: absolute;
+  width: 120px;
+  height: 997.88px;
+  left: 191px;
+  margin-left: 730px;
+  margin-top: -560px;
+  background: linear-gradient(180.09deg, rgba(255, 255, 255, 0) 0.49%, rgba(255, 255, 255, 0.04) 39.06%, rgba(255, 255, 255, 0) 99.92%);
+  transform: rotate(-120deg);
+  }
+  .L2{
+    position: absolute;
+  width: 120px;
+  height: 997.88px;
+  left: 660px;
+  top: 1072.86px;
+  margin-left: 700px;
+  margin-top: -860px;
+  background: linear-gradient(180.09deg, rgba(255, 255, 255, 0) 0.49%, rgba(255, 255, 255, 0.04) 39.06%, rgba(255, 255, 255, 0) 99.92%);
+  transform: rotate(-120deg);
+  }
+  .L3{
+    position: absolute;
+  width: 120px;
+  height: 997.88px;
+  left: 461.33px;
+  top: 417.8px;
+  margin-top: 650px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 34.75%, rgba(255, 255, 255, 0.1) 100%);
+  transform: rotate(60deg);
+  }
+  .D{
+    margin-left: 1300px;
+    margin-top: -600px;
+  }
+  .U{
+    margin-left: 1300px;
+    margin-top: 290px;
+  }
+  .BG2{
+    background: linear-gradient(180deg, #F8F9FB 0%, #FAFBFF 100%);
+  }
 .background{
   background-color: #2B076E;  
   width: 1440px;
@@ -86,6 +128,10 @@ border-radius: 16px;
 border-radius: 16px;
 }
 footer{
+    background: #0D0D2B;
+    width: 1440px;
+}
+.bgf1{
     background: #0D0D2B;
     width: 1440px;
 }
